tests/errors/semantic/blocking/INTERNAL_ERROR.py
# pylint: disable=missing-function-docstring, missing-module-docstring

a = 3 + 'non-valid Python expression'

